# stats

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh
inc/: condition.hpp  config.hpp  display.hpp  graphs.hpp  stats.hpp  values.hpp
src/: display.cpp  graphs.cpp  stats.cpp  values.cpp
stats/: confirms.json
